# reversirocq

./: .gitignore  .gitmodules  Makefile  README.md  dune-project  reversirocq.opam
docs/: index.data  index.html  index.js  index.wasm
src/: web_main.cpp  web_shell.html
theories/: Reversirocq.v  dune
